logs/2024-02-05-00-07/build/bioconductor_docker-3.19/x86_64/easyRNASeq
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''easyRNASeq'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-31 r85845)
Installing package(s) 'easyRNASeq'
also installing the dependencies ‘rtracklayer’, ‘LSD’, ‘BSgenome’, ‘BSgenome.Dmelanogaster.UCSC.dm3’

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/rtracklayer_1.63.0.tar.gz'
Content type 'application/x-gzip' length 4018472 bytes (3.8 MB)
==================================================
downloaded 3.8 MB

trying URL 'https://cloud.r-project.org/src/contrib/LSD_4.1-0.tar.gz'
Content type 'application/x-gzip' length 47403 bytes (46 KB)
==================================================
downloaded 46 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/BSgenome_1.71.1.tar.gz'
Content type 'application/x-gzip' length 5909258 bytes (5.6 MB)
==================================================
downloaded 5.6 MB

trying URL 'https://bioconductor.org/packages/3.19/data/annotation/src/contrib/BSgenome.Dmelanogaster.UCSC.dm3_1.4.0.tar.gz'
Content type 'application/x-gzip' length 38546795 bytes (36.8 MB)
==================================================
downloaded 36.8 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/easyRNASeq_2.39.0.tar.gz'
Content type 'application/x-gzip' length 72839661 bytes (69.5 MB)
==================================================
downloaded 69.5 MB

* installing *source* package ‘rtracklayer’ ...
** using staged installation
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking for OPENSSL... yes
configure: creating ./config.status
config.status: creating src/Makevars
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c S4Vectors_stubs.c -o S4Vectors_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c IRanges_stubs.c -o IRanges_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c XVector_stubs.c -o XVector_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c R_init_rtracklayer.c -o R_init_rtracklayer.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c readGFF.c -o readGFF.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bbiHelper.c -o bbiHelper.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigWig.c -o bigWig.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigBedHelper.c -o bigBedHelper.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigBed.c -o bigBed.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c chain_io.c -o chain_io.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c twoBit.c -o twoBit.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c handlers.c -o handlers.o
handlers.c: In function ‘R_warnHandler’:
handlers.c:10:11: error: format not a string literal and no format arguments [-Werror=format-security]
   10 |   warning(warn_buf);
      |           ^~~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: handlers.o] Error 1
ERROR: compilation failed for package ‘rtracklayer’
* removing ‘/tmp/tmp/built/rtracklayer’
* installing *source* package ‘LSD’ ...
** package ‘LSD’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** data
*** moving datasets to lazyload DB
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘LSD’ as ‘LSD_4.1-0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (LSD)
ERROR: dependency ‘rtracklayer’ is not available for package ‘BSgenome’
* removing ‘/tmp/tmp/built/BSgenome’
* installing *source* package ‘easyRNASeq’ ...
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
No methods found in package ‘BiocGenerics’ for request: ‘clusterApply’ when loading ‘easyRNASeq’
Creating a generic function for ‘basename’ from package ‘base’ in package ‘easyRNASeq’
Creating a generic function for ‘file.exists’ from package ‘base’ in package ‘easyRNASeq’
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
No methods found in package ‘BiocGenerics’ for request: ‘clusterApply’ when loading ‘easyRNASeq’
** testing if installed package can be loaded from final location
No methods found in package ‘BiocGenerics’ for request: ‘clusterApply’ when loading ‘easyRNASeq’
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘easyRNASeq’ as ‘easyRNASeq_2.39.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (easyRNASeq)
ERROR: dependency ‘BSgenome’ is not available for package ‘BSgenome.Dmelanogaster.UCSC.dm3’
* removing ‘/tmp/tmp/built/BSgenome.Dmelanogaster.UCSC.dm3’

The downloaded source packages are in
	‘/tmp/RtmpxkcTJV/downloaded_packages’
Old packages: 'rhdf5'
Warning messages:
1: In install.packages(...) :
  installation of package ‘rtracklayer’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘BSgenome’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘BSgenome.Dmelanogaster.UCSC.dm3’ had non-zero exit status

real	0m50.598s
user	0m39.819s
sys	0m4.978s
